--- a/package.json
+++ b/package.json
@@ -12,7 +12,12 @@
     "expo": "~46.0.9",
     "expo-status-bar": "~1.4.0",
     "react": "18.0.0",
-    "react-native": "0.69.5"
+    "react-native": "0.69.5",
+    "react-native-paper": "^4.12.4",
+    "react-native-paper-dropdown": "^1.0.7",
+    "react-redux": "^8.0.2",
+    "redux": "^4.2.0",
+    "redux-form": "^8.3.8"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9"
